# abstract-interpretation-course

./: .gitignore  .gitlab-ci.yml  README.md
1/: .merlin  Makefile  main.ml  test_suite.json  tests.py
1/examples/: detailed_gcd.c  deterministic_examples.json  examples.json  gcd.c  gcd_nd.c  loop.c  loop2.c  loop3.c  loop4.c  non_deterministic_examples.json
1/frontend/: abstract_syntax_printer.ml  abstract_syntax_printer.mli  abstract_syntax_tree.ml  file_parser.ml  interpreter.bak  interpreter.baki  interpreter.ml  lexer.mll  n_interpreter.ml  parser.messages  parser.mly  parser_messages.ml
1/libs/: fn.ml  option.ml
1/tests/: tests.json
1/tests/deterministic_tests/: add.c  and.c  deterministic_tests.json  div.c  div_zero.c  if.c  mod.c  mod_zero.c  mult.c  not.c  or.c  print_bool.c  sub.c  (+4 more)
2/: Makefile  main.ml
2/examples/: ex1.c  ex10.c  ex2.c  ex6.c  ex7.c  ex8.c  ex9.c
2/frontend/: abstract_syntax_printer.ml  abstract_syntax_printer.mli  abstract_syntax_tree.ml  abstract_syntax_utils.ml  file_parser.mli  lexer.mll  parser.mly  poly_type_analysis.ml  type_analysis.ml
2/libs/: fn.ml  option.ml
3/: Makefile  main.ml
3/examples/: ex3.c  ex4.c  ex5.c
3/frontend/: domain.ml  file_parser.ml  functor.ml  interval.ml  parser_messages.ml
3/libs/: uniqueId.ml
project/: Makefile  dune  main.ml
project/domains/: constant.ml  domain.ml  dune  interval.ml  value_domain.ml
project/frontend/: cfg.ml  dune  tree_to_cfg.ml
project/iterator/: dune  iterator.ml
project/libs/: dune  mapext.ml
project/test/: dune  my_domain.ml  test.expected  test.ml
(+1 files in other folders)
